chore: update translation 2

--- a/src/translations/id.json
+++ b/src/translations/id.json
@@ -84,7 +84,7 @@
     "161870324": "Pilih harga terbaik dan pesan, atau pasang iklan untuk mendapatkan harga yang Anda inginkan.",
     "163040015": "Bergabunglah dengan program afiliasi dan IB Deriv serta dapatkan kesempatan untuk bermitra dengan penyedia trading online tepercaya.",
     "166309424": "Tanpa biaya dengan hasil bulanan dan harian",
-    "170598749": "Basket indicies",
+    "170598749": "Indeks basket",
     "171302334": "Maka dalam skenario ini, Anda menetapkan jumlah batas kerugian pada <0>-7.23 USD</0>.",
     "171586173": "Temukan peluang karir yang tersedia di Deriv pada berbagai lokasi kantor kami di seluruh dunia.",
     "171638706": "Variabel",
@@ -267,7 +267,7 @@
     "438533033": "Tidak, Deriv.com dibangun, dimiliki, dan dikelola oleh tim yang sama dengan Binary.com. Didukung oleh pengalaman lebih dari 20 tahun, kami tidak pernah merasa lebih kuat atau lebih percaya diri dengan kemampuan kami untuk melayani Anda.",
     "439798157": "Impor strategi",
     "441557166": "Deriv X - platform trading CFD multi-aset yang tersedia di Deriv",
-    "442177402": "Crypto Pairs",
+    "442177402": "Pasangan Kripto",
     "447476086": "Laporan <0>negara</0>: menampilkan daftar negara dari mana klik berasal",
     "447711315": "Pengambilalihan subdomain",
     "448985812": "0-19,999%",
@@ -784,7 +784,6 @@
     "1190588251": "Memperlakukan semua pelanggan secara adil, menangani keluhan dengan integritas, dan menawarkan harga yang kompetitif tanpa biaya tersembunyi serta penarikan yang lancar untuk semua pelanggan.",
     "1191682103": "Tanpa perlu mendaftar. Akses menggunakan kredensial <0>Binary.com</0> Anda.",
     "1195213035": "Jika Anda ingin melanjutkan trading setelah pengecualian diri Anda berakhir dan setelah Anda mengajukan permintaan untuk menghapus pengecualian diri, akan ada periode pendinginan selama 24 jam sebelum Anda dapat mengakses situs kami.",
-    "1195630948": "HOME",
     "1196310280": "Intel",
     "1197939158": "Tidak menerima",
     "1198781410": "Kami telah mendesain pengalaman trading yang berfokus pada pelanggan dan intuitif untuk Deriv yang mengoptimasikan untuk menukar pengunjung menjadi pelanggan. Kami juga menyediakan peralatan dan materi kreatif yang Anda perlukan untuk membawa trafik pada Deriv.",
@@ -900,7 +899,6 @@
     "1391632806": "Trader dinilai berdasarkan tingkat penyelesaian dan kecepatan pertukaran mereka.",
     "1393006010": "Pengetahuan dasar trading CFD",
     "1394697594": "21.000",
-    "1394889813": "LOKASI",
     "1396179592": "Komisi",
     "1396417530": "Indeks Market Bear",
     "1399001016": "Misalkan Anda ingin menghitung jumlah batas keuntungan ketika Anda ingin membeli Indeks Volatilitas 100 seharga 3376,24 USD dengan modal 10 USD, nilai multiplier x100, dan tingkat batas keuntungan 3400 dengan arah Naik.",
@@ -1058,7 +1056,7 @@
     "1625424557": "<0>Netherland 25</0> mengikuti kinerja saham dari 25 perusahaan yang paling banyak ditradingkan di Belanda.",
     "1625517227": "Digunakan oleh lebih dari 20 juta klien di seluruh dunia. Nikmati akses instan, penarikan gratis, dan poin reward yang dapat Anda tukarkan dengan uang tunai.",
     "1629215229": "Instrumen yang tersedia untuk ditradingkan pada Multiplier",
-    "1631281562": "GBP Basket",
+    "1631281562": "Basket GBP",
     "1631620531": "Tahun pengalaman",
     "1631705059": "Menganalisa apakah spot akhir akan lebih tinggi atau lebih rendah dari harga target (barrier) pada akhir periode kontrak.",
     "1632238343": "Hingga $500",
@@ -1601,7 +1599,6 @@
     "-1496158755": "Kunjungi Deriv.com",
     "-373212993": "Situs web deriv",
     "-1788474476": "Pendaftaran Afiliasi & IB",
-    "-1804579157": "BESQUARE",
     "-1230441557": "Artikel unggulan",
     "-1115698466": "Lihat semua artikel",
     "-912438529": "Artikel, panduan trading dan sumber | Deriv",
@@ -2218,7 +2215,7 @@
     "-1164978320": "Indeks Jump 10",
     "-1991707178": "Brent crude oil",
     "-1734516342": "West Texas Intermediate",
-    "-280323742": "EUR Basket",
+    "-280323742": "Basket EUR",
     "-390528194": "Indeks Step",
     "-1995859410": "Daftar akun riil, deposit, dan mulailah bertrading forex dan pasar lainnya.",
     "-214202452": "Tarik dana Anda dengan mudah melalui metode penarikan yang kami sediakan.",
